--- a/src/style/theme.less
+++ b/src/style/theme.less
@@ -1,2 +1,2 @@
-@button-primary-bg-color: #82e1ff;
-@button-primary-active-bg-color: #68b3cb;
+@button-primary-bg-color: #66b9d3;
+@button-primary-active-bg-color: #4191aa;
